5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_579.log
== TEST (2019-03-13 23:16:32) 
-- CODE:
print (" A UFAM tem 110 anos e fundação")
-- OUTPUT:
A UFAM tem 110 anos e fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:16:41) 
-- CODE:
print (" A UFAM tem , 110 anos e fundação")
-- OUTPUT:
A UFAM tem , 110 anos e fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:16:52) 
-- CODE:
print (" A UFAM tem , 110 anos e fundacao")
-- OUTPUT:
A UFAM tem , 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:16:54) 
-- CODE:
print (" A UFAM tem , 110 anos e fundacao")
-- EXECUTION TIME:
0.160713
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem , 110 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:17:11) 
-- CODE:
print (" A UFAM tem , 110 "anos e fundacao")
-- ERROR:
File "XXXX", line 1
    print (" A UFAM tem , 110 "anos e fundacao")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:17:20) 
-- CODE:
print (" A UFAM tem , 110 "anos e fundacao")
-- EXECUTION TIME:
0.209766
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print (" A UFAM tem , 110 "anos e fundacao")
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:17:25) 
-- CODE:
print (" A UFAM tem , 110 anos e fundacao")
-- OUTPUT:
A UFAM tem , 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:17:26) 
-- CODE:
print (" A UFAM tem , 110 anos e fundacao")
-- EXECUTION TIME:
0.172226
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem , 110 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:17:37) 
-- CODE:
print (" A UFAM tem , 110 - anos e fundacao")
-- OUTPUT:
A UFAM tem , 110 - anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:17:39) 
-- CODE:
print (" A UFAM tem , 110 - anos e fundacao")
-- EXECUTION TIME:
0.199226
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem , 110 - anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:18:07) 
-- CODE:
print (" A UFAM tem , 2019 - 1909 anos e fundacao")
-- OUTPUT:
A UFAM tem , 2019 - 1909 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:18:16) 
-- CODE:
print (" A UFAM tem , 2019 - 1909 , anos e fundacao")
-- OUTPUT:
A UFAM tem , 2019 - 1909 , anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:18:29) 
-- CODE:
print (" A UFAM tem , 2019-1909 , anos e fundacao")
-- OUTPUT:
A UFAM tem , 2019-1909 , anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:18:44) 
-- CODE:
print (" A UFAM tem ,2019 - 1909, anos e fundacao")
-- OUTPUT:
A UFAM tem ,2019 - 1909, anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:19:27) 
-- CODE:
print (" A UFAM tem ,2019 -1909, anos e fundacao")
-- OUTPUT:
A UFAM tem ,2019 -1909, anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:19:36) 
-- CODE:
print (" A UFAM tem ,2019-1909, anos e fundacao")
-- OUTPUT:
A UFAM tem ,2019-1909, anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:19:45) 
-- CODE:
print (" A UFAM tem ,(2019-1909), anos e fundacao")
-- OUTPUT:
A UFAM tem ,(2019-1909), anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:19:53) 
-- CODE:
print (" A UFAM tem ,(2019 - 1909), anos e fundacao")
-- OUTPUT:
A UFAM tem ,(2019 - 1909), anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:20:17) 
-- CODE:
print (" A UFAM tem ,2019 - 1909, anos e fundacao")
-- OUTPUT:
A UFAM tem ,2019 - 1909, anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:20:25) 
-- CODE:
print (" A UFAM tem 2019 - 1909 anos e fundacao")
-- OUTPUT:
A UFAM tem 2019 - 1909 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:20:48) 
-- CODE:
print (" A UFAM tem 2016 - 1909 anos e fundacao")
-- OUTPUT:
A UFAM tem 2016 - 1909 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:20:50) 
-- CODE:
print (" A UFAM tem 2016 - 1909 anos e fundacao")
-- EXECUTION TIME:
0.202504
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 2016 - 1909 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:21:09) 
-- CODE:
print (" A UFAM tem" 2016 - 1909 "anos e fundacao")
-- ERROR:
File "XXXX", line 1
    print (" A UFAM tem" 2016 - 1909 "anos e fundacao")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:21:24) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:21:26) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.139324
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:21:34) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:21:35) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.174145
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:21:58) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:22:19) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:22:20) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.137208
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:22:33) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:26:37) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 110 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:27:58) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.162889
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:28:08) 
-- CODE:
print (" A UFAM tem", 2018 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 109 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:28:10) 
-- CODE:
print (" A UFAM tem", 2018 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.216609
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 109 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:28:23) 
-- CODE:
print (" A UFAM tem", 2019 - 1919, "anos e fundacao")
-- OUTPUT:
A UFAM tem 100 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:28:24) 
-- CODE:
print (" A UFAM tem", 2019 - 1919, "anos e fundacao")
-- EXECUTION TIME:
0.148785
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 100 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:28:30) 
-- CODE:
print (" A UFAM tem", 2019 - 1919, "anos e fundacao")
-- OUTPUT:
A UFAM tem 100 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:28:33) 
-- CODE:
print (" A UFAM tem", 2019 - 1919, "anos e fundacao")
-- EXECUTION TIME:
0.228067
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 100 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:03) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:29:08) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- EXECUTION TIME:
0.275375
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos e fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:19) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:20) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:20) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos e fundacao")
-- OUTPUT:
A UFAM tem 107 anos e fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:32) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:29:33) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.140657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:29:40) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:29:42) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.216083
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:30:12) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos de fundacao")
print (110)
-- OUTPUT:
A UFAM tem 110 anos de fundacao
110
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:30:13) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos de fundacao")
print (110)
-- EXECUTION TIME:
0.204097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
110
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:30:16) 
-- CODE:
print (" A UFAM tem", 2019 - 1909, "anos de fundacao")
print (110)
-- OUTPUT:
A UFAM tem 110 anos de fundacao
110
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:30:45) 
-- CODE:
print (" A UFAM tem", 2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:30:48) 
-- CODE:
print (" A UFAM tem", 2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.155206
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:31:02) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:31:22) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:31:27) 
-- CODE:
print (" A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.194572
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:32:06) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:32:08) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.16336
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:32:27) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:32:29) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
-- EXECUTION TIME:
0.146018
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:32:36) 
-- CODE:
print ("A UFAM tem",2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:32:37) 
-- CODE:
print ("A UFAM tem",2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.17286
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:32:51) 
-- CODE:
print ("A UFAM tem",2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:32:53) 
-- CODE:
print ("A UFAM tem",2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.134865
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:33:00) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 ,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:33:02) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 ,"anos de fundacao")
-- EXECUTION TIME:
0.140325
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:33:11) 
-- CODE:
print ("A UFAM tem", 2019 - 1909 ,"anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:33:12) 
-- CODE:
print ("A UFAM tem", 2019 - 1909 ,"anos de fundacao")
-- EXECUTION TIME:
0.148877
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:33:23) 
-- CODE:
print ("A UFAM tem", 2019 - 1909 , "anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:33:24) 
-- CODE:
print ("A UFAM tem", 2019 - 1909 , "anos de fundacao")
-- EXECUTION TIME:
0.153317
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:35:00) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
print ("A UFAM tem 107 anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:35:03) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
print ("A UFAM tem 107 anos de fundacao")
-- EXECUTION TIME:
0.166468
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:35:23) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
print (107)
-- OUTPUT:
A UFAM tem 107 anos de fundacao
107
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:35:25) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
print (107)
-- EXECUTION TIME:
0.203029
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
107
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:35:39) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:35:39) 
-- CODE:
print ("A UFAM tem", 2016 - 1909 , "anos de fundacao")
-- EXECUTION TIME:
0.138968
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:37:37) 
-- CODE:
print (107)
-- OUTPUT:
107
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:37:39) 
-- CODE:
print (107)
-- EXECUTION TIME:
0.159004
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
107
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:38:12) 
-- CODE:
print (110)
-- OUTPUT:
110
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:38:13) 
-- CODE:
print (110)
-- EXECUTION TIME:
0.188925
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
110
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:38:48) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:38:50) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.141546
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:25:19) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:25:21) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.130508
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
